--- a/client/src/components/atoms/auth/SidebarUserAvatar/SidebarUserAvatar.css
+++ b/client/src/components/atoms/auth/SidebarUserAvatar/SidebarUserAvatar.css
@@ -1,4 +1,4 @@
-.sidebar-user-container{
+.sidebar-user-container {
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -6,20 +6,27 @@
     transition: .2s;
 }
 
-.sidebar-user-container:hover{
+.sidebar-user-avatar-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.sidebar-user-container:hover {
     opacity: .8;
 }
 
-.sidebar-user-avatar{
+.sidebar-user-avatar {
     text-transform: uppercase;
 }
 
-.sidebar-user-avatar-container{
-    background-image: linear-gradient(to right, #2b2b2b 0%, #5f5f5f 100%);
+.sidebar-user-avatar-container {
     width: 40px;
-    border-radius: .5rem;
     height: 40px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
     display: flex;
+    align-items: center;
     justify-content: center;
     align-items: center;
     color: #FFF;
@@ -27,18 +34,18 @@
     font-size: 1.2rem;
 }
 
-.sidebar-user-details-container{
+.sidebar-user-details-container {
     display: flex;
     flex-direction: column;
     gap: .1rem;
 }
 
-.sidebar-user-avatar-container[data-avatarrounded='true']{
+.sidebar-user-avatar-container[data-avatarrounded='true'] {
     font-size: 1rem;
     background-image: linear-gradient(to top, #5602b6 0%, #9472cdf5 100%);
 }
 
-.sidebar-user-fullname{
+.sidebar-user-fullname {
     font-size: 1.1rem;
     color: var(--color-text-primary);
     text-transform: capitalize;
